--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,22 @@
-/*  your css code here. If applicable */
+
+
+.star {
+    width: 0;
+    height: 0;
+    border-left: 50px solid transparent;
+    border-right: 50px solid transparent;
+    border-bottom: 100px solid yellow;
+    position: relative;
+}
+
+.star::before, .star::after {
+    content: '';
+    width: 0;
+    height: 0;
+    border-left: 50px solid transparent;
+    border-right: 50px solid transparent;
+    border-top: 100px solid yellow;
+    position: absolute;
+    top: 25px;
+    left: -50px;
+}
